# dns-orchestrator

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
dns-orchestrator-core/: Cargo.toml
dns-orchestrator-core/docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
dns-orchestrator-core/src/: crypto.rs  error.rs  lib.rs
dns-orchestrator-provider/docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  TESTING.md  TESTING.zh-CN.md
dns-orchestrator-provider/src/: lib.rs
dns-orchestrator-provider/tests/: aliyun_test.rs  cloudflare_test.rs  dnspod_test.rs  huaweicloud_test.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  TESTING.md  TESTING.zh-CN.md  TODO.md
docs/release-notes/: v1.0.12.md  v1.1.0.md  v1.3.0.md  v1.5.1.md  v1.6.0.md  v1.7.0.md
public/icons/: icon.icns
scripts/: sync-version.mjs
src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
src-actix-web/: Cargo.toml
src-actix-web/migration/: Cargo.toml
src-actix-web/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  error.rs  lib.rs  types.rs
src-tauri/tauri-plugin-apk-installer/: Cargo.toml
src-tauri/tauri-plugin-apk-installer/src/: lib.rs  mobile.rs
src/constants/: index.ts
src/i18n/: index.ts
src/lib/: debug.ts  env.ts  error.ts  logger.ts  tauri.ts
src/services/: account.service.ts  dns.service.ts  domain.service.ts  domainMetadata.service.ts  index.ts  toolbox.service.ts
src/stores/: accountStore.ts  dnsStore.ts  domainStore.ts  (+4 more)
(+156 files in other folders)
